--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ node_modules
 # Quasar core related directories
 .quasar
 # /dist
+/dist
 
 # Cordova related directories and files
 /src-cordova/node_modules
@@ -19,6 +20,7 @@ node_modules
 # BEX related directories and files
 /src-bex/www
 /src-bex/js/core
+
 
 # Log files
 npm-debug.log*
